# rast

./: .gitmodules  AGENTS.md  Cargo.toml  README.md
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
crates/svt-av1/: Cargo.toml  README.md
crates/svt-av1-sys/: Cargo.toml  README.md  build.rs
crates/svt-av1-sys/src/: lib.rs
crates/svt-av1/examples/: decode.rs  encode.rs  encode_roi.rs
crates/svt-av1/src/: lib.rs  tests.rs
